# couch-context

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  FIX_SUMMARY.md  MEMORY_SYSTEM_GUIDE.md  QUICK_START.md  README.md  SETUP_GUIDE.md  pyproject.toml
scripts/: bootstrap_linux.sh  bootstrap_macos.sh
src/cb_memory/: __init__.py  config.py  db.py  embeddings.py  models.py  project.py  server.py  sync.py
src/cb_memory/cli/: installer.py  main.py
src/cb_memory/importers/: base.py  claude_code.py  codex.py  factory.py  generic.py  opencode.py
src/cb_memory/tools/: context.py  recall.py  save.py  search.py  sessions.py
tests/: test_claude_importer.py  test_cli_bootstrap.py  test_codex_importer.py  test_context_fallback.py  test_context_reasoning.py  test_embeddings.py  test_installer.py  test_models.py  test_opencode_importer.py  test_project.py  test_search_kv.py  test_sync.py  test_tools.py
tests/fixtures/: sample_session.json
